hide cube spinner on mobile and fix for multiple screen widths

--- a/src/components/About/index.scss
+++ b/src/components/About/index.scss
@@ -1,13 +1,29 @@
 .stage-cube-cont {
-  width: 45%;
-  height: 75%;
-  position: absolute;
-  top: -15%;
-  right: 15%;
-  padding-top: 18%;
-  margin-left: 0;
-  margin-top: 100px;
+  width: 50%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  left: 30%;
+  padding-top: 25%;
+  margin-right: 50%;
+  margin-top: 0;
   overflow: hidden;
+
+  @media only screen and (max-width: 601px) {
+    display: none;
+  }
+
+  @media only screen and (min-width: 601px) {
+    margin-top: -100px;
+  }
+
+  @media only screen and (min-width: 1025px) {
+    margin-top: -200px;
+  }
+
+  @media only screen and (min-width: 2001px) {
+    margin-top: -500px;
+  }
 }
 
 .cubespinner {
